# PATRepository

./: CMakeLists.txt  Change.cpp  PAT1001.cpp  PAT1002.cpp  PAT1004.cpp  PAT1005.cpp  PAT1006.cpp  PAT1007.cpp  PAT1008.cpp  PAT1009.cpp  PAT1010.cpp  PAT1011.cpp  PAT1012.cpp  PAT1013.cpp  PAT1014.cpp  PAT1015.cpp  PAT1016.cpp  PAT1017.cpp  PAT1018.cpp  PAT1021.cpp  PAT1022.cpp  PAT1023.cpp  PAT1026.cpp  PAT1028.cpp  PAT1029.cpp  PAT1030 .cpp  PAT1031.cpp  PAT1032.cpp  PAT1033.cpp  PAT1036.cpp  PAT1038 .cpp  PAT1039.cpp  PAT1041.cpp  PAT1042.cpp  PAT1043.cpp  PAT1044.cpp  PAT1047.cpp  PAT1049.cpp  PAT1061 .cpp  PAT1076.cpp  (+2 more)
