cmake_minimum_required(VERSION 3.20)
project(first)

set(CMAKE_CXX_STANDARD 14)

#add_executable(PATCLASSB main.cpp "PAT 1002.cpp" "PAT 1004.cpp" "PAT 1006.cpp" "PAT 1013.cpp" "PAT 1008.cpp" "PAT 1007.cpp" "PAT 1009.cpp")
#add_executable(PATCLASSB main.cpp "PAT 1002.cpp" "PAT 1004.cpp" "PAT 1006.cpp" "PAT 1013.cpp" "PAT 1008.cpp" "PAT 1007.cpp" "PAT 1009.cpp")
add_executable(main main.cpp)
add_executable(PAT1010 PAT1010.cpp)
add_executable(PAT1002 PAT1002.cpp)
add_executable(PAT1004 PAT1004.cpp)
add_executable(PAT1006 PAT1006.cpp)
add_executable(PAT1007 PAT1007.cpp)
add_executable(PAT1008 PAT1008.cpp)
add_executable(PAT1009 PAT1009.cpp)
add_executable(PAT1013 PAT1013.cpp)
add_executable(PAT1011 PAT1011.cpp)
add_executable(PAT1012 PAT1012.cpp)
add_executable(PAT1014 PAT1014.cpp)
add_executable(PAT1015 PAT1015.cpp)
add_executable(PAT1001 PAT1001.cpp)
add_executable(PAT1016 PAT1016.cpp)
add_executable(PAT1021 PAT1021.cpp)
add_executable(PAT1018 PAT1018.cpp)
add_executable(PAT1022 PAT1022.cpp)
add_executable(PAT1030  "PAT1030 .cpp")
add_executable(PAT1038  "PAT1038 .cpp")
add_executable(PAT1041 PAT1041.cpp)
add_executable(PAT1026 PAT1026.cpp)
add_executable(PAT1036 PAT1036.cpp)
add_executable(PAT1044 PAT1044.cpp)
add_executable(PAT1029 PAT1029.cpp)
add_executable(PAT1028 PAT1028.cpp)
add_executable(Change Change.cpp)
add_executable(PAT1017 PAT1017.cpp)
add_executable(PAT1019 PAT1019.cpp)
add_executable(PAT1023 PAT1023.cpp)
add_executable(slice slice.cpp)
add_executable(PAT1042 PAT1042.cpp)
add_executable(PAT1025 PAT1025.cpp)
add_executable(PAT1005 PAT1005.cpp)
add_executable(PAT1047 PAT1047.cpp)
add_executable(test test.cpp)
add_executable(PAT1061  "PAT1061 .cpp")
add_executable(PAT1054  "PAT1054 .cpp")
add_executable(PAT1033 PAT1033.cpp)
add_executable(PAT1031 PAT1031.cpp)
add_executable(PAT1065 PAT1065.cpp)
add_executable(DS DS.cpp)
add_executable(Eightsort Eightsort.cpp)
add_executable(Dijkstra Dijkstra.cpp)
add_executable(PATexercise1 PATexercise1.cpp)
add_executable(PAT1076 PAT1076.cpp)
add_executable(PAT1048 PAT1048.cpp)
add_executable(PAT1077 PAT1077.cpp)
add_executable(Space Space.cpp)
add_executable(PAT1020 PAT1020.cpp)
add_executable(PAT1032 PAT1032.cpp)
add_executable(PAT1037 PAT1037.cpp)
add_executable(Acwing2041 Acwing2041.cpp)
add_executable(Acwing797 Acwing797.cpp)
add_executable(PAT1046 PAT1046.cpp)
add_executable(PAT1049 PAT1049.cpp)
add_executable(PAT1039 PAT1039.cpp)
add_executable(PAT1043 PAT1043.cpp)